# crc_benchmark

./: CMakeLists.txt  README.md  crc_aarch64_benchmark.cpp  crc_benchmark.cpp  crc_x86_benchmark.cpp  result_graviton4.md  results_graviton2.md
src/: avx512_vpclmulqdq_crc32c_v3s2x4.c  avx512_vpclmulqdq_v3s2x4e.c  crc.h  crc_avx512_vpclmulqdq.c  crc_gnulib.c  crc_sse.c
src/aarch64/: ab_neon_crc32c_v9s5x5.c  crc32_chrome_scalar_opt.c  crc32_chromium_scalar.c  crc32_neon_eor3_v9s3x2.c  crc32_simd_chromium.c  crc32_simd_cloudfare_zlib.c  test
src/x86/: crc_neon.c
